<resources>
    <string name="app_name">WeatherApp</string>
    <string name="cityTextView">City</string>
    <string name="conditionTextView">Condition</string>
    <string name="temperatureTextView">Temperature</string>
    <string name="timeTextView">Time</string>

    <string name="citTextView">City</string>
    <string name="condTextView">Condition</string>
    <string name="tempTextView">Temp</string>
    <string name="tiTextView">Time</string>
    <string name="icoImageView"></string>

</resources>